--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!--mobile app develop-->
-<!--home, calendar, community, resources, profile-->
-<body style="background-color: #1C2951;"></body>
-<div class="topnav">
-    <a href="#home">Home</a>
-    <a href="#calendar">Calendar</a>
-    <a href="#community">Community</a>
-    <a href="#resources">Resources</a>
-    <a href="#profile">Profile</a>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>FBLA App</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body style="background-color: #1C2951;">
+
+  <div class="topnav">
+      <a href="#home" class="active">Home</a>
+      <a href="#calendar">Calendar</a>
+      <a href="#community">Community</a>
+      <a href="#resources">Resources</a>
+      <a href="#profile">Profile</a>
+  </div>
+
+</body>
+</html>
