--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body style="background-color: #1C2951;">
 
   <div class="topnav">
+      <a href="#home" class="logo">
+        <img src="fbla-logo.png" alt="FBLA Logo">
+      </a>
       <a href="#home" class="active">Home</a>
       <a href="#calendar">Calendar</a>
       <a href="#community">Community</a>
