--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <div class="topnav">
       <a href="#home" class="logo">
-        <img src="fbla-logo.png" alt="FBLA Logo">
+        <img src="fbla-logo.jpeg" alt="FBLA Logo">
       </a>
       <a href="#home" class="active">Home</a>
       <a href="#calendar">Calendar</a>
