--- a/index.html
+++ b/index.html
@@ -1,42 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>FBLA App</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body style="background-color: #1C2951;">
 
-  <!-- Navbar with logo and tabs -->
   <div class="topnav">
       <a href="#home" class="logo">
-          <img src="fbla-logo.jpeg" alt="FBLA Logo">
+        <img src="fbla-logo.jpeg" alt="FBLA Logo">
       </a>
-      <a href="#home" class="tablink active" onclick="openTab(event, 'Home')">Home</a>
-      <a href="#calendar" class="tablink" onclick="openTab(event, 'Calendar')">Calendar</a>
-      <a href="#community" class="tablink" onclick="openTab(event, 'Community')">Community</a>
-      <a href="#resources" class="tablink" onclick="openTab(event, 'Resources')">Resources</a>
-      <a href="#profile" class="tablink" onclick="openTab(event, 'Profile')">Profile</a>
+      <a href="#home" class="active">Home</a>
+      <a href="#calendar">Calendar</a>
+      <a href="#community">Community</a>
+      <a href="#resources">Resources</a>
+      <a href="#profile">Profile</a>
   </div>
 
-  <!-- Tab sections -->
-  <div id="Home" class="tabcontent">
-    <h2>Home</h2>
-    <p>Welcome to the Home tab!</p>
-  </div>
-
-  <div id="Calendar" class="tabcontent">
-    <h2>Calendar</h2>
-    <p>Here’s the calendar.</p>
-  </div>
-
-  <div id="Community" class="tabcontent">
-    <h2>Community</h2>
-    <p>Connect with the community here.</p>
-  </div>
-
-  <div id="Resources" class="tabcontent">
-    <h2>Resources</h2>
-    <p>Check out the resources.</p>
-  </div>
-
-  <div id="Profile" class="tabcontent">
-    <h2>Profile</h2>
-    <p>This is your profile page.</p>
-  </div>
-
-  <script src="app.js"></script>
 </body>
+</html>
