--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 </head>
 <body style="background-color: #1C2951;">
 
-  <div class="topnav">
-      <a href="#home" class="logo">
+<div class="topnav">
+    <div class="logo">
         <img src="fbla-logo.jpeg" alt="FBLA Logo">
-      </a>
-      <a href="#home" class="active">Home</a>
-      <a href="#calendar">Calendar</a>
-      <a href="#community">Community</a>
-      <a href="#resources">Resources</a>
-      <a href="#profile">Profile</a>
-  </div>
+    </div>
+
+    <a href="javascript:void(0)" class="active">Home</a>
+    <a href="javascript:void(0)">Calendar</a>
+    <a href="javascript:void(0)">Community</a>
+    <a href="javascript:void(0)">Resources</a>
+    <a href="javascript:void(0)">Profile</a>
+</div>
+
 
 </body>
 </html>
