--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="fbla-logo.jpeg" alt="FBLA Logo">
     </div>
 
-    <a href="javascript:void(0)" class="active">Home</a>
+    <a href="javascript:void(0)">Home</a>
     <a href="javascript:void(0)">Calendar</a>
     <a href="javascript:void(0)">Community</a>
     <a href="javascript:void(0)">Resources</a>
