--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <div class="logo">
         <img src="fbla-logo.jpeg" alt="FBLA Logo">
     </div>
-
-    <a href="javascript:void(0)">Home</a>
-    <a href="javascript:void(0)">Calendar</a>
-    <a href="javascript:void(0)">Community</a>
-    <a href="javascript:void(0)">Resources</a>
-    <a href="javascript:void(0)">Profile</a>
+    <a href="index.html">Home</a>
+    <a href="calendar.html">Calendar</a>
+    <a href="community.html">Community</a>
+    <a href="resources.html">Resources</a>
+    <a href="profile.html">Profile</a>
 </div>
 
 <script src="app.js"></script>
