--- a/calendar.html
+++ b/calendar.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Calendar | FBLA App</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body style="background-color: #1C2951;">
+
+<div class="topnav">
+  <div class="logo">
+    <img src="fbla-logo.jpeg" alt="FBLA Logo">
+  </div>
+
+  <a href="index.html">Home</a>
+  <a href="calendar.html">Calendar</a>
+  <a href="community.html">Community</a>
+  <a href="resources.html">Resources</a>
+  <a href="profile.html">Profile</a>
+</div>
+
+<h1 style="color: white;">Calendar</h1>
+<p style="color: white;">Upcoming FBLA events and deadlines.</p>
+
+<script src="app.js"></script>
+</body>
+</html>
 
