--- a/calendar.html
+++ b/calendar.html
@@ -19,7 +19,7 @@
   <a href="profile.html">Profile</a>
 </div>
 
-<h1 style="color: white;">Calendar</h1>
+<h1 style="color:white;">CALENDAR PAGE</h1>
 <p style="color: white;">Upcoming FBLA events and deadlines.</p>
 
 <script src="app.js"></script>
