--- a/community.html
+++ b/community.html
@@ -22,6 +22,6 @@
 <h1 style="color:white;">COMMUNITY PAGE</h1>
 <p style="color: white;">This is your community page.</p>
 
-<script src="app.js"></script>
+<!-- <script src="app.js"></script> -->
 </body>
 </html>
