--- a/profile.html
+++ b/profile.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Profile | FBLA App</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body style="background-color: #1C2951;">
 
+<div class="topnav">
+  <div class="logo">
+    <img src="fbla-logo.jpeg" alt="FBLA Logo">
+  </div>
+
+  <a href="index.html">Home</a>
+  <a href="calendar.html">Calendar</a>
+  <a href="community.html">Community</a>
+  <a href="resources.html">Resources</a>
+  <a href="profile" class="active">Profile</a>
+</div>
+
+<h1 style="color:white;">PROFILE PAGE</h1>
+<p style="color: white;">This is your profile page.</p>
+
+<!-- <script src="app.js"></script> -->
+</body>
+</html>
