--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
   <a href="calendar.html">Calendar</a>
   <a href="community.html">Community</a>
   <a href="resources.html">Resources</a>
-  <a href="profile.html" class="active">Profile</a>
+  <a href="profile.html">Profile</a>
 </div>
 
 <h1 style="color:white;">PROFILE PAGE</h1>
