--- a/profile.html
+++ b/profile.html
@@ -19,8 +19,8 @@
   <a href="profile.html" class="active">Profile</a>
 </div>
 
-<h1 style="color:white;">PROFILE PAGE</h1>
-<p style="color: white;">This is your profile page.</p>
+<h1 class="profile-header"style="color:red;">My Profile</h1>
+<p class="profile-header" style="color: red;">Sally Smithson</p>
 
 </body>
 </html>
