--- a/profile.html
+++ b/profile.html
@@ -18,9 +18,21 @@
   <a href="resources.html">Resources</a>
   <a href="profile.html" class="active">Profile</a>
 </div>
-
+<!-- PROFILE INFORMATION -->
 <h1 class="profile-header" style="color:white;">My Profile</h1>
-<p class="profile-header" style="color:white;">Sally Smithson</p>
+<h2 class="profile-header" style="color:white;">Sally Smithson<br>River Hill High School</h2>
+<h3 class="profile-header" style="color:white;">Howard County</h3>
+<h3 class="profile-header" style="color:white;">Clarksville, Maryland<br><b></b>Grade: 12<b></b></h3>
+
 
 </body>
 </html>
+<!--
+<h1>Biggest</h1>
+<h2>Second biggest</h2>
+<h3>Medium</h3>
+<h4>Small</h4>
+<h5>Smaller</h5>
+<h6>Smallest</h6>
+to make bold put <b> around text
+-->
