--- a/profile.html
+++ b/profile.html
@@ -20,9 +20,11 @@
 </div>
 <!-- PROFILE INFORMATION -->
 <h1 class="profile-header" style="color:white;">My Profile</h1>
-<h2 class="profile-header" style="color:white;">Sally Smithson<br>River Hill High School</h2>
+<h2 class="profile-header" style="color:white;">Sally Smithson<br></h2>
+<h3 class="profile-header" style="color:white;">River Hill High School</h3>
 <h3 class="profile-header" style="color:white;">Howard County</h3>
-<h3 class="profile-header" style="color:white;">Clarksville, Maryland<br><b></b>Grade: 12<b></b></h3>
+<h3 class="profile-header" style="color:white;">Clarksville, Maryland<br></h3>
+<h3 class="profile-header"><b>Grade: 12</b></h3>
 
 
 </body>
