--- a/profile.html
+++ b/profile.html
@@ -18,13 +18,20 @@
   <a href="resources.html">Resources</a>
   <a href="profile.html" class="active">Profile</a>
 </div>
-<!-- PROFILE INFORMATION -->
+<!-- PROFILE UPPER INFORMATION -->
 <h1 class="profile-header" style="color:white;">My Profile</h1>
 <h2 class="profile-header" style="color:white;">Sally Smithson<br></h2>
 <h3 class="profile-header" style="color:white;">River Hill High School</h3>
 <h3 class="profile-header" style="color:white;">Howard County</h3>
 <h3 class="profile-header" style="color:white;">Clarksville, Maryland<br></h3>
 <h3 class="profile-header"><b>Grade: 12</b></h3>
+
+<!-- PROFILE LOWER INFORMATION -->
+<h3 class="profile-info">Chapter President</h3>
+<h3 class="profile-info">3rd Year FBLA</h3>
+<h3 class="profile-info">First Place National Leadership Conference 2024<br></h3>
+<h4 class="profile-info">Event: Social Media Strategies</h4>
+<h4 class="profile-info">Qualified for State Leadership Conference 2026</h4>
 
 
 </body>
