--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
 
 <div class="topnav">
   <div class="logo">
-    <img src="fbla-logo.jpeg" alt="FBLA Logo">
+    <img src="fbla-logo.jpeg" alt="FBLA Logo" class="pfp">
   </div>
 
   <a href="index.html">Home</a>
@@ -25,7 +25,8 @@
 <h3 class="profile-header">Howard County</h3>
 <h3 class="profile-header">Clarksville, Maryland</h3>
 <h3 class="profile-header"><b>Grade: 12</b></h3>
-
+<img src="womanInSuit.jpg" alt=Profile Picture">
+  
 <!-- PROFILE LOWER INFORMATION -->
 <h3 class="profile-info">Chapter President</h3>
 <h3 class="profile-info">3rd Year FBLA</h3>
