--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
 <h3 class="profile-header">Howard County</h3>
 <h3 class="profile-header">Clarksville, Maryland</h3>
 <h3 class="profile-header"><b>Grade: 12</b></h3>
-<img src="womanInSuit.jpg" alt=Profile Picture">
+<img src="sallysmithson.jpg" alt=Profile Picture">
   
 <!-- PROFILE LOWER INFORMATION -->
 <h3 class="profile-info">Chapter President</h3>
